--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ body {
     margin-left: 30%;
     margin-right: 30%;
     margin-bottom: 5px;
+    border-bottom: 10px;
     border-radius: 25px;
 }
 
