--- a/style.css
+++ b/style.css
@@ -93,3 +93,9 @@ body {
     padding: 10px;
     float: none;
 }
+
+.categorynotes {
+    font-size: 20px;
+    color: white;
+    font-style: italic;
+}
