--- a/style.css
+++ b/style.css
@@ -98,6 +98,11 @@ body {
     background-color: #fca903;
 }
 
+#remains {
+    text-color: #fff;
+    background-color: #373737
+}
+
 #jServ {
     background-color: #EF8354;
 }
