Updated site to 2026

--- a/style.css
+++ b/style.css
@@ -54,7 +54,11 @@ body {
     animation: fadeInP ease 0.5s 1.5s both;
 }
 
-#p3 a {
+#p4 {
+    animation: fadeInP ease 0.5s 2s both;
+}
+
+#p4 a {
     color: #42f584;
 }
 
